Avance de pagina al 70%

--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
 		<header>
 			<div class="logo">
 				<h1>Gelatinarte</h1>
-				<img src="img/food1.png" alt="" />
+				<img src="img/food1.png" alt="" id="poster" />
 			</div>
-			<nav>
+			<nav> 	 	
 				<i class="bi menu bi-list"></i><!--agregar link del icono-->
 				<div class="right_menu">
 					<ul>
@@ -27,7 +27,7 @@
 			<div class="left_menu"></div>
 			<section>
 				<div class="content">
-					<h1 class="title">Gelatina de Fresa</h1>
+					<h1 class="title" id="title">Gelatina de Fresa</h1>
 					<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum sunt maiores tempora illum laudantium quibusdam itaque repudiandae placeat soluta? Error in pariatur maiores dolorem culpa itaque consequatur fugiat aliquam quis!</p>
 					<div class="price_order">
 						<div class="price">
@@ -98,6 +98,11 @@
 					<div class="btns">
 						<i class="bi bi-caret-left-fill"></i>
 						<i class="bi bi-caret-right-fill"></i>
+					</div>
+					<div class="icons">
+						<i class="bi bi-facebook"></i>
+						<i class="bi bi-whatsapp"></i>
+						<i class="bi bi-instagram"></i>
 					</div>
 				</div>
 			</section>
