--- a/day1/index.html
+++ b/day1/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css">
     <title>day1 js drumKit</title>
 </head>
 <body>
@@ -53,11 +54,20 @@
             <kbd>L</kbd>
             <span class="sound">Tink</span>
         </div>
-
-
-
     </div>
 
+<audio data-key="65" src=""></audio>
+<audio data-key="83" src=""></audio>
+<audio data-key="68" src=""></audio>
+<audio data-key="70" src=""></audio>
+<audio data-key="71" src=""></audio>
+<audio data-key="72" src=""></audio>
+<audio data-key="73" src=""></audio>
+<audio data-key="74" src=""></audio>
+<audio data-key="75" src=""></audio>
+<audio data-key="76" src=""></audio>
+
+<script src="app.js"></script>
 
 </body>
 </html>
