First program finalized

--- a/day1/index.html
+++ b/day1/index.html
@@ -40,7 +40,7 @@
             <span class="sound">Ride</span>
         </div>
 
-        <div data-key="74" class="key">
+        <div data-key="74" class="key" >
             <kbd>J</kbd>
             <span class="sound">Snare</span>
         </div>
@@ -56,16 +56,16 @@
         </div>
     </div>
 
-<audio data-key="65" src=""></audio>
-<audio data-key="83" src=""></audio>
-<audio data-key="68" src=""></audio>
-<audio data-key="70" src=""></audio>
-<audio data-key="71" src=""></audio>
-<audio data-key="72" src=""></audio>
-<audio data-key="73" src=""></audio>
-<audio data-key="74" src=""></audio>
-<audio data-key="75" src=""></audio>
-<audio data-key="76" src=""></audio>
+<audio data-key="65" src="sounds/sonido (1).wav"></audio>
+<audio data-key="83" src="sounds/sonido (2).wav"></audio>
+<audio data-key="68" src="sounds/sonido (3).wav"></audio>
+<audio data-key="70" src="sounds/sonido (4).wav"></audio>
+<audio data-key="71" src="sounds/sonido (5).wav"></audio>
+<audio data-key="72" src="sounds/sonido (6).wav"></audio>
+<audio data-key="74" src="sounds/sonido (7).wav"></audio>
+<audio data-key="75" src="sounds/sonido (8).wav"></audio>
+<audio data-key="76" src="sounds/sonido (9).wav"></audio>
+
 
 <script src="app.js"></script>
 
